# Ceshi

./: build.gradle  settings.gradle
app/: build.gradle  traces.txt  traces.txt.bugreport
app/libs/: app.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: a.txt
app/src/main/cpp/: CMakeLists.txt  Util.cpp  jnitest.cpp
app/src/main/cpp/son/: Person.cpp  Person.h
app/src/main/java/okhttp3/: ConnectionPool.java  Dispatcher.java  OkHttpClient.java  RealCall.java
app/src/main/res/drawable/: bg_tab.xml
app/src/main/res/drawable-night-v29/: bg_tab.xml
app/src/main/res/layout/: activity_aidl_demo.xml  activity_animator_demo.xml  activity_annotation.xml  activity_apt_demo.xml  activity_broadcast_reciver.xml  activity_butter_knife_acitivity.xml  activity_content_provider_demo.xml  activity_context_demo_actvity.xml  activity_custom_view.xml  activity_custom_view1.xml  activity_data_binding_show.xml  activity_dispatch_demo_actviity.xml  activity_dynamic_fragement.xml  activity_event_bus_demo.xml  activity_executors.xml  activity_haha.xml  activity_handler.xml  activity_hook.xml  activity_http_demo.xml  activity_http_original.xml  activity_invalidate_view.xml  activity_kotlin.xml  activity_kotlin_second.xml  activity_linked_hash_map.xml  activity_list_view_in_scroll_view.xml  activity_lru.xml  activity_main.xml  activity_multi_process.xml  activity_mvvm.xml  activity_my_fragement_show_and_hide.xml  activity_my_fragment_demo_acitivity.xml  activity_my_static_fragement.xml  activity_my_surface_view_actviity.xml  activity_next.xml  activity_okhttp.xml  activity_retrofit.xml  (+22 more)
base/: build.gradle
base/src/main/: AndroidManifest.xml
bugreport-2020-12-30-15-14-17/: dumpstate_log.txt  main_entry.txt
bugreport-2020-12-30-15-14-17/FS/data/tombstones/: tombstone_00  tombstone_04  tombstone_08
gradle/wrapper/: gradle-wrapper.properties
w/: dumpstate_log.txt  main_entry.txt
w/FS/data/tombstones/: tombstone_01  tombstone_02  tombstone_03  tombstone_05  tombstone_06  tombstone_07  tombstone_09
(+229 files in other folders)
